--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "babel-core": "^5.5.6",
     "babel-loader": "^5.1.4",
     "express": "^4.12.4",
+    "history": "^2.0.1",
     "jade": "^1.10.0",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.7",
     "react-router": "^0.13.3",
-    "webpack": "^1.9.10",
+    "superagent": "^1.8.0-beta.2",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
