--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
+    "express-http-proxy": "^0.6.0",
     "nodemon": "^1.3.7"
   }
 }
