--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "express-http-proxy": "^0.6.0",
     "jquery": "^2.2.1",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "slick-carousel": "^1.5.9"
   }
 }
