--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
   },
   "dependencies": {
     "express-http-proxy": "^0.6.0",
-    "jquery": "^2.2.1",
-    "nodemon": "^1.3.7",
-    "slick-carousel": "^1.5.9"
+    "nodemon": "^1.3.7"
   }
 }
